--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -3,7 +3,8 @@ Development author:
 Development date: 00.00.2025 -->
 @@include('header.html')
 <main class="main">
-	<h1>Hello, friend!</h1>
-	<p>The future is at your fingertips. Write code!</p>
+  <h1>Hello, friend!</h1>
+  <img src="images/img.webp" alt="img" />
+  <p>The future is at your fingertips. Write code!</p>
 </main>
 @@include('footer.html')
